--- a/Readme.html
+++ b/Readme.html
@@ -15,6 +15,7 @@ A description and graph is given for each.</p>
 <li><a href="Site3/Readme.html">Site 3</a></li>
 <li><a href="Site4/Readme.html">Site 4</a></li>
 <li><a href="Site5/Readme.html">Site 5</a></li>
+<li><a href="Site6/Readme.html">Site 6</a></li>
 </ul>
 
 </body>
