Now using NPM for dependencies, run npm install on clone and you're done

--- a/Scaffold.html
+++ b/Scaffold.html
@@ -8,13 +8,13 @@
 <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 <script type="text/javascript" src="jquery-1.10.2.js"></script>
 <script type="text/javascript" src="jquery-ui.js"></script>
-<script type="text/javascript" src="../src/Dom.js"></script>
-<script type="text/javascript" src="../src/Wsm.js"></script>
-<script type="text/javascript" src="../src/VanillaWsm.js"></script>
-<script type="text/javascript" src="../src/NoBacktrackWsm.js"></script>
-<script type="text/javascript" src="../src/WebOnePointOhWsm.js"></script>
-<script type="text/javascript" src="../src/BacktrackWsm.js"></script>
-<script type="text/javascript" src="../src/TansuoWsm.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/Dom.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/Wsm.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/VanillaWsm.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/NoBacktrackWsm.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/WebOnePointOhWsm.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/BacktrackWsm.js"></script>
+<script type="text/javascript" src="node_modules/Web-State-Machine/src/TansuoWsm.js"></script>
 <script type="text/javascript" src="Scaffold.js"></script>
 </head>
 <body>
