Fixed anchor click, now handling hashlinks and mailto won't stop either. May have broken something else, but atm, it seems to work.

--- a/sites/index.html
+++ b/sites/index.html
@@ -7,6 +7,7 @@
 	<h1>Access Test pages from here</h1>
 
 	<ul>
+		<li><a href="hashlink/">hashlink</a></li>
 		<li><a href="Site0/">Site 0</a></li>
 		<li><a href="Site1/">Site 1</a></li>	
 		<li><a href="Site1b/">Site 1b</a></li>
