Updated demo sites. moved record.php into lib and we now prevent php error on undefined index at $_SERVER["HTTPS"] and $_SESSION["state-variable"].

--- a/sites/hashlink/end.html
+++ b/sites/hashlink/end.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<h1>Their is nothing to see here</h1>
+	<h1>There is nothing to see here</h1>
 	<p>If crawler got here, it probably worked.</p>
 
 </body>
