updated sites, added external to test outgoing links

--- a/sites/Site2/index2.html
+++ b/sites/Site2/index2.html
@@ -15,21 +15,6 @@
 
 <p id="target">Some paragraph</p>
 
-<script type="text/javascript">
-//<![CDATA[
-$("button").click(function () {
-    var contents = $(this).html();
-    var out = "";
-    if (contents == "Element 1")
-      out = "A first paragraph";
-    if (contents == "Element 2")
-      out = "A second paragraph";
-    if (contents == "Element 3")
-      out = "A third paragraph";
-    $("#target").html(out);
-    return false;
-});
-//]]>
-</script>
+<script type="text/javascript" src="js/index2.js"></script>
 </body>
 </html>
