--- a/sites/index.html
+++ b/sites/index.html
@@ -7,7 +7,6 @@
 	<h1>Access Test pages from here</h1>
 
 	<ul>
-		<li><a href="hashlink/">hashlink</a></li>
 		<li><a href="Site0/">Site 0</a></li>
 		<li><a href="Site1/">Site 1</a></li>	
 		<li><a href="Site1b/">Site 1b</a></li>
@@ -16,6 +15,8 @@
 		<li><a href="Site4/">Site 4</a></li>
 		<li><a href="Site5/">Site 5</a></li>
 		<li><a href="Site6/">Site 6</a></li>
+        <li><a href="hashlink/">hashlink</a></li>
+        <li><a href="external/">Outgoing Links</a></li>
 	</ul>
 
 </body>
