--- a/sites/Site2/index.html
+++ b/sites/Site2/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" src="../jquery-1.10.2.js"></script>
+<script type="text/javascript" src="../../bower_components/jquery/jquery.min.js"></script>
 <title>A page</title>
 </head>
 <body>
@@ -14,20 +14,6 @@
 
 <p id="target">Some paragraph</p>
 
-<script type="text/javascript">
-//<![CDATA[
-$("li").click(function () {
-    var contents = $(this).html();
-    var out = "";
-    if (contents == "Element 1")
-      out = "A first paragraph";
-    if (contents == "Element 2")
-      out = "A second paragraph";
-    if (contents == "Element 3")
-      out = "A third paragraph";
-    $("#target").html(out);
-});
-//]]>
-</script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
