refactored some code, added auto refresh for graph and dot file. added Domain restriction. added some todos. Note: there may be a new issue with Web 1.0 and Tansuo now. will need to fix this asap

--- a/Scaffold.html
+++ b/Scaffold.html
@@ -98,7 +98,7 @@
 					<input type="radio" name="outputType" value="xml" />&nbsp;XML
 				</div>
 				<textarea id="dot-contents"></textarea>
-				<div><button id="btn-dot-refresh">Refresh</button></div>
+				<div><button id="btn-dot-refresh">Refresh</button> <input type="checkbox" id="dot-autorefresh" /> Auto Refresh</div>
 			</div>
 
 		</div><!-- /column 2 -->
@@ -107,7 +107,7 @@
 			<div class="square">
 				<h2>GraphViz</h2>
 				<div id="dot-graph"></div>
-				<div><button id="btn-graph-refresh">Refresh</button></div>
+				<div><button id="btn-graph-refresh">Refresh</button><input type="checkbox" id="graph-autorefresh" /> Auto Refresh (slower)</div>
 			</div>
 
 		</div><!-- /column 3 -->
