fixed Domain Restriction, added iframe Status Display and linked the ajaxListener, we now only need to ask the ajaxListener if a request occured on last element click, than to wait untill onReadyState == 4 to compare dom. Side note: Even if a request did not manage to modify the dom, dynamic state may have change in js background so this could be a good idea to mark nodes where ajax requests occured

--- a/Scaffold.html
+++ b/Scaffold.html
@@ -88,6 +88,36 @@
 				</ul>
 			</div>
 
+            <div id="iframe-status" class="square">
+                <h2>iframe status</h2>
+                <table>
+                    <tr>
+                        <th>Current Status</th>
+                        <td><a id="iframeStatus"></a></td>
+                    </tr>
+                    <tr>
+                        <th>Href</th>
+                        <td><a id="href"></a></td>
+                    </tr>
+                    <tr>
+                        <th>Host</th>
+                        <td id="host"></td>
+                    </tr>
+                    <tr>
+                        <th>Path Name</th>
+                        <td><a id="pathname"></a></td>
+                    </tr>
+                    <tr>
+                        <th>Protocol</th>
+                        <td id="protocol"></td>
+                    </tr>
+                    <tr>
+                        <th>Pages Loaded</th>
+                        <td id="pagesLoaded"></td>
+                    </tr>
+                </table>
+            </div>
+
 			<!-- Contents of the current node in the WSM's memory -->
 			<pre id="nodecontents"></pre>
 
