ajax verification now working as expected, updated ajaxListener to use its caughtRequests Array

--- a/sites/index.html
+++ b/sites/index.html
@@ -7,6 +7,8 @@
 	<h1>Access Test pages from here</h1>
 
 	<ul>
+        <li><a href="ajax1/">Ajax 1</a></li>
+        <li><a href="ajax2/">Ajax 2</a></li>
 		<li><a href="Site0/">Site 0</a></li>
 		<li><a href="Site1/">Site 1</a></li>	
 		<li><a href="Site1b/">Site 1b</a></li>
